# LayOpts

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua  test.cpp
Projects/Interfaces/: main.cpp
Projects/LayOpts/: CMakeLists.txt
Projects/LayOpts/Parsers/headers/: ClangParser.hpp  Parser.hpp
Projects/LayOpts/Parsers/src/: ClangParser.cpp  Parser.cpp
Projects/LayOpts/Types/headers/: ArrayType.hpp  Field.hpp  PrimitiveType.hpp  StructType.hpp  Type.hpp
Projects/LayOpts/Types/src/: ArrayType.cpp  Field.cpp  PrimitiveType.cpp  StructType.cpp  Type.cpp
